<resources>
    <string name="app_name">Task Reminder</string>
    <string name="sign_in">Sign in:</string>
    <string name="logout_settings">Logout</string>
    <string name="attempts">Number of attempts remaining: </string>
    <string name="enter_client_details">Enter Client\'\s details: </string>
    <string name="client_name">Full names</string>
    <string name="email_of_insured">Email address</string>
    <string name="phone_number_of_insured">Phone number</string>
    <string name="type_of_policy">Type of policy</string>
    <string name="date_of_issue">Date of Issue</string>
    <string name="date_issued_renew">Date Issued/renew</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="add_client">Add Client</string>
    <string name="view_client">Search Client</string>
    <string name="delete_client">Delete Client</string>
    <string name="delete">Delete</string>
    <string name="submit_button">Submit</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search Client</string>
    <string name="title_delete">Delete Client</string>
    <string name="search_hint">Search Client</string>
    <string name="search_prompt">Enter Client\'\s ID Number</string>

</resources>
